@@ -9,14 +9,14 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class MapUtilsTest {
+public class MapUtilTest {
 
     @Test
     public void testInverse() {
-        assertEquals(Map.of("1", 1), MapUtils.inverse(Map.of(1, "1")));
+        assertEquals(Map.of("1", 1), MapUtil.inverse(Map.of(1, "1")));
         assertEquals(Map.of("1", 1, "2", 2, "3", 3),
-                MapUtils.inverse(Map.of(1, "1", 2, "2", 3, "3")));
-        assertEquals(Collections.emptyMap(), MapUtils.inverse(Collections.emptyMap()));
+                MapUtil.inverse(Map.of(1, "1", 2, "2", 3, "3")));
+        assertEquals(Collections.emptyMap(), MapUtil.inverse(Collections.emptyMap()));
     }
 
     @Test
@@ -25,9 +25,9 @@ public class MapUtilsTest {
         final Map<String, Integer> unsorted = Map.of("2", 2, "1", 1, "3", 3);
         final Map<String, Integer> singleton = Map.of("3", 3);
         final Map<String, Integer> empty = new HashMap<>();
-        assertEquals(expected, MapUtils.sort(unsorted, Comparator.comparingInt(Map.Entry::getValue)));
-        assertEquals(empty, MapUtils.sort(empty, Comparator.comparingInt(Map.Entry::getValue)));
-        assertEquals(singleton, MapUtils.sort(singleton, Comparator.comparingInt(Map.Entry::getValue)));
+        assertEquals(expected, MapUtil.sort(unsorted, Comparator.comparingInt(Map.Entry::getValue)));
+        assertEquals(empty, MapUtil.sort(empty, Comparator.comparingInt(Map.Entry::getValue)));
+        assertEquals(singleton, MapUtil.sort(singleton, Comparator.comparingInt(Map.Entry::getValue)));
     }
 
 }
