@@ -8,18 +8,18 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-public class RandUtilsTest {
+public class RandUtilTest {
 
     @Test
     public void testRandValueList() {
-        assertNull(RandUtils.randValue(Collections.emptyList()));
-        assertEquals(5, RandUtils.randValue(List.of(5)));
+        assertNull(RandUtil.randValue(Collections.emptyList()));
+        assertEquals(5, RandUtil.randValue(List.of(5)));
     }
 
     @Test
     public void testRandValueArray() {
-        assertNull(RandUtils.randValue(new Integer[0]));
-        assertEquals(5, RandUtils.randValue(List.of(5).toArray(new Integer[0])));
+        assertNull(RandUtil.randValue(new Integer[0]));
+        assertEquals(5, RandUtil.randValue(List.of(5).toArray(new Integer[0])));
     }
 
 }
